# GenAI-Projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
API/: app.py  client.py
Basic Rag Chatbot/: Retriever.ipynb  simpleRAG.ipynb
FAQ Bot/: app.py
Multi Tool Basic Agent Chatbot/: agents.ipynb
chatbot/: Readme.md  locallama_app.py  openai_app.py
