[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langchainhub>=0.1.21",
    "langserve>=0.3.1",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "sse-starlette>=2.3.6",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
